--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@ footer {
     color: var(--text-color);
     border-top: 1px solid var(--border-color);
     padding: 10px 0px;
+    font-size: .8rem;
 }
 
 .hide {
@@ -351,6 +352,4 @@ footer {
         padding: 0;
         margin: 0;
     }
-
-
 }
